[package]
name = "blaze-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
#memmap2 = "0.9.9"
#rayon = "1.11.0"
#reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.149"
anyhow = "1.0.100"
colored = "3.1.1"
axum = "0.8.8"
#uuid = { version = "1.20.0", features = ["v4"] }
chrono = "0.4.43"
rand = "0.9.2"
sha2 = "0.10.9"
pbkdf2 = "0.12.2"
hex = "0.4.3"
#lettre = "0.11.19"