[package]
name = "blaze-service"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "blz_service"
path = "src/bin/service.rs"

#[[bin]]
#name = "blz-proxy"
#path = "src/bin/proxy.rs"

[lib]
name = "blaze_service"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
memmap2 = "0.9.9"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
colored = "3.1.1"
axum = "0.8.8"
chrono = "0.4.43"
rand = "0.9.2"
sha2 = "0.10.9"
pbkdf2 = "0.12.2"
hex = "0.4.3"
dirs = "6.0.0"
lettre = "0.11.19"
base64 = "0.22"
dotenv = "0.15.0"
#lettre_email = "0.9.4"